# birding-webpage

./: LICENSE  README.md  birdweb.json  environment.yml  pyproject.toml
.github/workflows/: python-app.yml
birdweb/: data.py  index.py  models.py
birdweb/api/: __init__.py
birdweb/index/: __init__.py
tests/: conftest.py  test_basic_api.py  test_index.py  test_models.py
